--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-
+	<div style="padding: 0px 20px;width: 600px;">
 	<section class="container" id="contact" >
 		<form class="flip">
 			<div class="front">
@@ -56,7 +56,7 @@
 			</div>
 		</form>
 	</section>
-
+	</div>
 </body>
 </html>
 
