--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-<meta name="viewport" content="width=device-width, height=device-height">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>邀请函</title>
 	
