--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <link rel="stylesheet" href="stylesheets/style.css" />
 
 </head>
-<body>
-	<div style="padding: 0px 20px;width: 600px;">
+<body style="width:100%;">
+	<div style="width:100%;padding: 10px 0px;">
 	<section class="container" id="contact" >
 		<form class="flip">
 			<div class="front">
