--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-<meta name="viewport" content="width=620, height=device-height">
+<meta name="viewport" content="width=device-width, height=device-height">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>邀请函</title>
 	
@@ -9,7 +9,7 @@
 
 </head>
 <body style="width:100%;">
-	<div style="padding: 0px 10px">
+	<div style="padding: 0px 10px;">
 	<section class="container" id="contact" >
 		<form class="flip">
 			<div class="front">
