--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, height=device-height">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>邀请函</title>
+<title>邀请函1</title>
 	
 <link rel="stylesheet" href="stylesheets/style.css" />
 
