--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-<meta name="viewport" content="width=device-width, height=device-height">
+<meta name="viewport" content="width=620px, height=device-height">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>邀请函1</title>
+<title>邀请函</title>
 	
 <link rel="stylesheet" href="stylesheets/style.css" />
 
 </head>
-<body style="width:100%;">
-	<div style="padding: 0px 10px;">
+<body>
+	<div style="width:100%;">
 	<section class="container" id="contact" >
 		<form class="flip">
 			<div class="front">
-				<h2 style="font-size: 40px;">邀请函</h2>
+				<h2 style="font-size: 40px;">邀请函1</h2>
 				<a id="flip2back" href="#">点击拆开</a>
 			</div>
 			<div id="content" class="back">
