--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-<meta name="viewport" content="width=620px, height=device-height">
+<meta name="viewport" content="width=device-width, height=device-height">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>邀请函</title>
 	
@@ -13,7 +13,7 @@
 	<section class="container" id="contact" >
 		<form class="flip">
 			<div class="front">
-				<h2 style="font-size: 40px;">邀请函1</h2>
+				<h2 style="font-size: 40px;">邀请函22</h2>
 				<a id="flip2back" href="#">点击拆开</a>
 			</div>
 			<div id="content" class="back">
