--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<section class="container" id="contact" >
 		<form class="flip">
 			<div class="front">
-				<h2 style="font-size: 40px;">邀请函22</h2>
+				<h2 style="font-size: 40px;">邀请函</h2>
 				<a id="flip2back" href="#">点击拆开</a>
 			</div>
 			<div id="content" class="back">
