--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 						<h2 style="text-align: center">邀请函</h1>
 						<div>
 							<div class="back">
-									You&#39;d like us to work for you or you&#39;re here to 
-									say hello ? Don&#39;t hesitate - just drop us a 
-									line. You&#39;ll hear back from us soon. Thanks. 
+								美丽的邵静莹女士<br>
+								<div style="text-indent: 2em;">
+									匆匆一周即将逝去，五天辛苦耕耘
+								</div>
 							</div>
 						</div>
 					</div>
