--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 							<div class="back">
 								美丽的邵静莹女士<br>
 								<div style="text-indent: 2em;">
-									匆匆一周即将逝去，五天辛苦耕耘
+									时间匆匆，又迎周末，恰逢姜文年度大作《邪不压正》上映，
+									为此，挚诚地邀请美丽的你一同观影.
 								</div>
 							</div>
 						</div>
