--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 								美丽的邵静莹女士<br>
 								<div style="text-indent: 2em;">
 									时间匆匆，又迎周末，恰逢姜文年度大作《邪不压正》上映，
-									为此，挚诚地邀请美丽的你一同观影.<br/>
-									<span style='font-size:12px;color: #ddd'>(后面不知道怎么写了....)</span>
+									为此，挚诚地邀请美丽的你一同观影.
+									<div style='font-size:12px;color: #ddd;text-align:center;'>(后面不知道怎么写了......看这么辛苦的份上，就接受邀请吧)</div>
 								</div>
 							</div>
 						</div>
