--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 									时间匆匆，又迎周末，恰逢姜文年度大作《邪不压正》上映，
 									为此，挚诚地邀请美丽的你一同观影.
 								</div>
-								<div style='font-size:12px;color: #b1aeae;text-align:center;'>(后面不知道怎么写了......看这么辛苦的份上，就接受邀请吧)</div>
+								<div style='font-size:12px;color: #b1aeae;text-align:center;padding-top:2px;'>(后面不知道怎么写了...不要泼冷水哈)</div>
 							</div>
 						</div>
 					</div>
